syntax = "proto3";

package pb;

//protoc -I resource/proto/ --go_out=plugins=rpc_grpc:$GOPATH/src/github.com/nextbin/go-gen-id/src/server/component/gen/rpc_grpc/pb gen.proto

service Gen {
    rpc GenId (GenIdRequest) returns (GenIdResponse) {
    }
}

message GenIdRequest {
}

message GenIdResponse {
    int32 code = 1;
    int64 id = 2;
}